--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@ body{
   top:0;
 }
 
+
+a:link, a:visited {
+  text-decoration: none;
+}
+
 .hide{
   display: none !important;
 }
@@ -279,19 +284,6 @@ button {  font-family: "Ubuntu", sans-serif;}
 }
 
 
-/* Media query for small screens */
-@media screen and (max-width: 1200px) {
- .center-links{
-  display: none;
- }
- .logins{
-  display: none;
- }
- 
-}
-
-
-  
 .container {  display: flex;  background-color: rgb(255, 255, 255);
   margin-top: 3%;  margin-left: auto;  margin-right: auto;
   border-radius: 10px;
@@ -345,6 +337,9 @@ button {  font-family: "Ubuntu", sans-serif;}
 
 .step1 {  position: inherit;  padding-left: 5px;
   background-color: rgba(156, 55, 55, 0);
+}
+.step1 a:visited{
+   color:white;
 }
 
 .steps p {  margin-bottom: 0px;
