--- a/src/App.css
+++ b/src/App.css
@@ -368,3 +368,70 @@ button {  font-family: "Ubuntu", sans-serif;}
   background-color: rgba(0, 255, 51, 0);
   padding-left: 380px;  padding-top: 50px;}
 
+
+
+
+
+  @media (max-width: 1000px) {
+    .container-admin{    display: flex;
+      flex-direction: column; background-color: hsl(227, 36%, 90%);
+      margin-top: 3%;    margin-left: auto;
+      margin-right: auto;
+      box-shadow: 20px 20px 20px rgba(47, 18, 18, 0.101);
+      width: 375px;    height: 680px;  }
+  
+    .displayStep {    display: flex;    justify-content: center;
+      width: 100%;    height: 172px;
+      background-color: rgba(30, 16, 186, 0);
+      background-image: url(./assets/bg-sidebar-mobile.svg);
+      border-radius: 10px;
+    }
+  
+    .stepContainer {    background-color: rgb(255, 255, 255);
+      width: 250px;    height: 500px;
+      position: absolute;    margin-top: 90px;
+      margin-left: 45px;    margin-right: auto;
+      margin-bottom: auto;    border-radius: 10px;    padding: 20px;
+    }
+    .buttonContainerStepOne {    position: relative;
+      background-color: rgba(0, 255, 51, 0);
+      padding-left: 130px;    padding-top: 39px;
+    }
+    
+  
+    .steps {    display: none;  }
+    .circle {    position: relative;    width: 50%;    color: white;
+      font-weight: 500;    height: 2%;    display: flex;
+      flex-direction: row;
+    }
+    .circle p {    margin-top: 5px;  }
+    .circle1 {    width: 30px;    height: 30px;
+      border-radius: 20px;    background-color: rgb(255, 255, 255);
+      border: solid 1px white;    display: flex;
+      justify-content: center;    color: black;
+    }
+    .circle2 {    width: 30px;    height: 30px;
+      border-radius: 20px;    background-color: rgba(0, 0, 0, 0);
+      border: solid 1px white;    display: flex;
+      justify-content: center;
+    }
+    .circle3 {    width: 30px; height: 30px;    border-radius: 20px;
+      background-color: rgba(0, 0, 0, 0);
+      border: solid 1px white;    display: flex;
+      justify-content: center;
+    }
+    .circle4 {    width: 30px;    height: 30px;  border-radius: 20px;
+      background-color: rgba(0, 0, 0, 0);  border: solid 1px white;
+      display: flex;    justify-content: center;
+    }
+    #stepInfo {    display: flex;    flex-direction: column;  }
+  
+    .stepInfo h1 {    margin-top: 0;  }
+  
+    #stepInfo input {
+      width: 100%; 
+      height: 40px;
+      border-radius: 5px;
+      border: solid 1px rgba(103, 92, 92, 0.628);
+    }
+  }
